add testcase generate
